Added link to rally
Co-authored-by: Pavel Sidorenko <fat.cat.1703@gmail.com>

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -89,7 +89,7 @@
         {
           "Question": "Can anybody join this study?",
           "Paragraphs": [
-            "Yes. TestBoston is open to all adults in the greater Boston area. To volunteer, please fill in a brief screening survey here. If you volunteer and are selected to participate, you will be emailed an invitation code to register."
+            "Yes. TestBoston is open to all adults in the greater Boston area. To volunteer, please fill in a brief screening survey <a class=\"Link Link_semi-bold\" href=\"https://rally.partners.org/study/testboston\" target=\"_blank\">here</a>. If you volunteer and are selected to participate, you will be emailed an invitation code to register."
           ]
         },
         {
